deployment/kubernetes/infra/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka-cqrs
spec:
  type: LoadBalancer
  selector:
    app: kafka-cqrs
    service: kafka-service
  ports:
  - name: kafka-service-port
    protocol: TCP
    port: 9092
    targetPort: 9092
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-cqrs-kafka-service
  labels:
    app: kafka-cqrs
    service: kafka-service
spec:
  serviceName: kafka-service
  selector:
    matchLabels:
      app: kafka-cqrs
      service: kafka-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: kafka-service
    spec:
      containers:
      - name: kafka-service
        image: apache/kafka:3.9.0
        ports:
          - containerPort: 9092
        volumeMounts:
          - name: kafka-data
            mountPath: /tmp/kraft-combined-logs
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 45
          periodSeconds: 10
      volumes:
        - name: kafka-data
          emptyDir: {}
