deployment/kubernetes/infra/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  labels:
    app: kafka-cqrs
spec:
  selector:
    app: kafka-cqrs
    service: zookeeper-service
  ports:
  - name: zookeeper-service-port
    protocol: TCP
    port: 2181
    targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cqrs-zookeeper-service
  labels:
    app: kafka-cqrs
    service: zookeeper-service
spec:
  selector:
    matchLabels:
      app: kafka-cqrs
      service: zookeeper-service
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-cqrs
        service: zookeeper-service
    spec:
      containers:
      - name: zookeeper-service
        image: bitnami/zookeeper:3.6.2-debian-10-r168
        ports:
          - containerPort: 2181
        readinessProbe:
          tcpSocket:
            port: 2181
          initialDelaySeconds: 1
          periodSeconds: 1
